Reduce bloat by eliminating nsString member variable (size of nsString and double-on-fault growth).  r=jag  sr=hyatt  b=109963